--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Principle Asset Management | Institutional Structured Products</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&display=swap">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,7 +17,7 @@
             <a href="index.html" class="logo">First Principle</a>
             <ul class="nav-links">
                 <li><a href="about.html">About</a></li>
-                <li><a href="product.html">Structured Solutions</a></li>
+                <li><a href="product.html">Strategy</a></li>
                 <li><a href="simulator.html">Portfolio Simulator</a></li>
                 <li><a href="resources.html">Resources</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -30,66 +33,112 @@
             <div class="container">
                 <div class="hero-content-new">
                     <div class="hero-text-new">
-                        <h1 class="hero-title-new">Institutional Structured Products, Built for Advisors</h1>
-                        <p class="hero-subheader-new">First Principle Asset Management delivers research-driven, SMA-based structured solutions grounded in institutional investment discipline. Our approach applies rigorous academic principles, options theory, and precise risk modeling to create engineered downside protection frameworks for the advisory market.</p>
+                        <h1 class="hero-title-new">Portfolio Enhancement for a New Market Regime</h1>
+                        <p class="hero-subheader-new">First Principle Asset Management designs structured-note portfolios that convert market volatility into stable income and improved risk-adjusted returns. We help advisors and institutions replace a portion of traditional equity and bond exposure with engineered, downside-aware payoff profiles.</p>
                         <div class="hero-buttons-new">
-                            <a href="product.html" class="btn btn-primary">Explore Our Approach</a>
-                            <a href="about.html" class="btn btn-secondary">Learn About Our Origins</a>
+                            <a href="product.html" class="btn btn-primary">How the Strategy Works</a>
+                            <a href="simulator.html" class="btn btn-secondary">See Portfolio Impact</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- THREE PILLARS SECTION -->
-        <section class="pillars">
+        <!-- WHY PORTFOLIOS NEED A NEW APPROACH -->
+        <section class="section problem alt-bg">
             <div class="container">
-                <h2 class="section-header">Our Core Principles</h2>
-                <p class="section-subheader">Our structured product frameworks are built on rigorous analytical foundations: disciplined risk management, institutional-grade infrastructure, and transparent, research-driven execution.</p>
+                <h2 class="section-header">Why Portfolios Need a New Approach</h2>
+                <p class="section-subheader">
+                    Forward-looking equity returns sit near decade lows, while volatility and macro uncertainty remain elevated. Traditional 60/40 portfolios face compressed return expectations, higher cross-asset correlation, and less reliable diversification.
+                </p>
                 <div class="pillars-grid">
                     <div class="pillar-card">
-                        <h3>Safety</h3>
-                        <p>Engineered downside protection through disciplined SMA construction, precise risk modeling, and controlled exposure parameters grounded in options theory.</p>
+                        <h3>Lower Forward Returns</h3>
+                        <p>Sell-side capital market assumptions from JPMorgan, BlackRock, and Goldman Sachs project the weakest expected equity and 60/40 returns in more than a decade.</p>
                     </div>
                     <div class="pillar-card">
-                        <h3>Security</h3>
-                        <p>Institutional infrastructure with blue-chip partners, rigorous oversight, and operational systems that meet the standards of institutional investment management.</p>
+                        <h3>Persistent Volatility</h3>
+                        <p>Market volatility remains structurally elevated, driven by macro uncertainty, factor dispersion, and geopolitical instability.</p>
                     </div>
                     <div class="pillar-card">
-                        <h3>Trust</h3>
-                        <p>A conflict-free, advisor-first model with transparent operations and incentives aligned around long-term, research-driven outcomes.</p>
+                        <h3>Crowded Income Sources</h3>
+                        <p>Income sources such as IG and HY credit are increasingly crowded and offer limited incremental yield, while correlations to equities continue to rise.</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- STRUCTURED PRODUCTS STRIP -->
-        <section class="products-strip">
+        <!-- OUR SOLUTION: TURNING VOLATILITY INTO INCOME -->
+        <section class="section solution dark-bg">
             <div class="container">
-                <p class="strip-text">A systematic approach to structured products: research-driven, SMA-based, and engineered through institutional investment discipline for the advisory market.</p>
+                <h2 class="section-header">Our Solution: Turning Volatility Into Income</h2>
+                <p class="section-subheader">
+                    We design diversified portfolios of structured notes engineered to complement traditional equity and credit exposure. Returns are driven by volatility pricing and outcome-defined payoff structures—not by market timing or directional forecasts.
+                </p>
+                <div class="pillars-grid">
+                    <div class="pillar-card">
+                        <h3>Volatility as a Source of Income</h3>
+                        <p>Our portfolios convert market volatility into consistent income by harvesting option premiums across diversified underlying indices. Payoff mechanics, not market direction, drive returns.</p>
+                    </div>
+                    <div class="pillar-card">
+                        <h3>Higher Income with Defined Risk Parameters</h3>
+                        <p>Structured-note portfolios deliver elevated cash yields relative to IG and HY credit, without duration risk. Transparent barrier levels tied to broad indices provide clarity on potential outcomes.</p>
+                    </div>
+                    <div class="pillar-card">
+                        <h3>Outcome-Driven Behavior Across Market Regimes</h3>
+                        <p>Structured-note payoffs behave differently from long-only assets, generating income in range-bound or moderately rising markets and adding asymmetric exposure that complements traditional portfolios.</p>
+                    </div>
+                </div>
             </div>
         </section>
 
-        <!-- STATS SECTION -->
-        <section class="stats">
+        <!-- EXPLORE WHAT MATTERS TO YOU -->
+        <section class="section explore">
             <div class="container">
-                <div class="stats-grid">
-                    <div class="stat-card">
-                        <h3>Heritage</h3>
-                        <p>Multi-Family Office Roots</p>
-                    </div>
-                    <div class="stat-card">
-                        <h3>Track Record</h3>
-                        <p>4.5+ Years Audited</p>
-                    </div>
-                    <div class="stat-card">
-                        <h3>Experience</h3>
-                        <p>50+ Years Combined</p>
-                    </div>
-                    <div class="stat-card">
-                        <h3>Scale</h3>
-                        <p>$ Billions Managed</p>
-                    </div>
+                <h2 class="section-header">Explore What Matters to You</h2>
+                <p class="section-subheader">
+                    Choose where to begin: our team, the portfolio impact of structured note allocations, or the mechanics of the strategy.
+                </p>
+                <div class="cta-grid">
+                    <a href="about.html" class="cta-card">
+                        <div class="cta-icon">
+                            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                                <circle cx="9" cy="7" r="4"></circle>
+                                <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                                <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                            </svg>
+                        </div>
+                        <h3>Why We Win</h3>
+                        <p>
+                            Learn how our structured-product expertise, multi-family office background, and institutional portfolio-engineering process allow First Principle to enhance advisor portfolios in ways traditional note providers cannot.
+                        </p>
+                    </a>
+                    <a href="simulator.html" class="cta-card">
+                        <div class="cta-icon">
+                            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                <line x1="18" y1="20" x2="18" y2="10"></line>
+                                <line x1="12" y1="20" x2="12" y2="4"></line>
+                                <line x1="6" y1="20" x2="6" y2="14"></line>
+                            </svg>
+                        </div>
+                        <h3>See Portfolio Impact</h3>
+                        <p>
+                            Evaluate how reallocating part of your equity or credit exposure into structured-note portfolios can reshape income, volatility, and downside behavior in our interactive simulator.
+                        </p>
+                    </a>
+                    <a href="product.html" class="cta-card">
+                        <div class="cta-icon">
+                            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                <circle cx="12" cy="12" r="3"></circle>
+                                <path d="M12 1v6m0 6v6M5.64 5.64l4.24 4.24m4.24 4.24l4.24 4.24M1 12h6m6 0h6M5.64 18.36l4.24-4.24m4.24-4.24l4.24-4.24"></path>
+                            </svg>
+                        </div>
+                        <h3>How the Strategy Works</h3>
+                        <p>
+                            Review our structured-note architecture, payoff mechanics, and risk framework and see how these portfolios sit alongside traditional exposures.
+                        </p>
+                    </a>
                 </div>
             </div>
         </section>
