--- a/simulator.html
+++ b/simulator.html
@@ -3,9 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Structured Products | First Principle Asset Management</title>
+    <title>Portfolio Simulator | First Principle Asset Management</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&display=swap">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+    <style>
+        .simulator-chart-container {
+            padding-top: 0;
+            margin-top: -40px;
+        }
+
+        .simulator-header-bar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 0 10px 0;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.06);
+            margin-bottom: 20px;
+            gap: 2rem;
+        }
+
+        .simulator-header-title {
+            font-family: "Playfair Display", "Times New Roman", serif;
+            font-size: 32px;
+            font-weight: 500;
+            color: #C8A678;
+            margin: 0;
+            flex: 1;
+        }
+
+        .allocation-overlay {
+            margin-top: 0;
+        }
+
+        @media (max-width: 768px) {
+            .simulator-header-bar {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+
+            .allocation-overlay {
+                width: 100%;
+            }
+        }
+    </style>
 </head>
 <body>
     <!-- HEADER / NAV -->
@@ -14,7 +57,7 @@
             <a href="index.html" class="logo">First Principle</a>
             <ul class="nav-links">
                 <li><a href="about.html">About</a></li>
-                <li><a href="product.html">Structured Solutions</a></li>
+                <li><a href="product.html">Strategy</a></li>
                 <li><a href="simulator.html">Portfolio Simulator</a></li>
                 <li><a href="resources.html">Resources</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -28,9 +71,8 @@
             <div class="container">
                 <!-- Chart Section - Dominates the Page -->
                 <div class="simulator-chart-container">
-                    <!-- Title and Allocation Box - Side by Side -->
-                    <div class="chart-header-row">
-                        <div class="chart-title-overlay">Illustrative Portfolio Outcomes with Structured Products</div>
+                    <div class="simulator-header-bar">
+                        <h2 class="simulator-header-title">Illustrative Portfolio Outcomes with Structured Products</h2>
                         <div class="allocation-overlay">
                             <div class="allocation-title-minimal">Current Allocation</div>
                             <div class="allocation-grid">
@@ -79,25 +121,25 @@
                     <div class="control-bar-item">
                         <div class="slider-header">
                             <span class="slider-label-minimal">Structured Equity Sleeve</span>
-                            <span class="slider-value-minimal" id="structuredEquityValue">0%</span>
+                            <span class="slider-value-minimal" id="structuredEquityValue">20%</span>
                         </div>
-                        <input type="range" id="structuredEquity" min="0" max="60" value="0" step="5" class="slider-premium">
-                        <div class="slider-note-minimal">Expected return: 12%</div>
+                        <input type="range" id="structuredEquity" min="0" max="60" value="20" step="5" class="slider-premium">
+                        <div class="slider-note-minimal">Expected return: 10%</div>
                     </div>
 
                     <div class="control-bar-item">
                         <div class="slider-header">
                             <span class="slider-label-minimal">Structured Fixed Income Sleeve</span>
-                            <span class="slider-value-minimal" id="structuredFixedIncomeValue">0%</span>
+                            <span class="slider-value-minimal" id="structuredFixedIncomeValue">10%</span>
                         </div>
-                        <input type="range" id="structuredFixedIncome" min="0" max="40" value="0" step="5" class="slider-premium">
-                        <div class="slider-note-minimal">Expected return: 8%</div>
+                        <input type="range" id="structuredFixedIncome" min="0" max="40" value="10" step="5" class="slider-premium">
+                        <div class="slider-note-minimal">Expected return: 7%</div>
                     </div>
                 </div>
 
                 <!-- Assumptions Notation -->
                 <div class="assumptions-notation">
-                    Assumptions: 60% equities at 8% expected return • 40% fixed income at 5% expected return • Structured equity at 12% • Structured fixed income at 8%
+                    Assumptions: Base portfolio is 60% broad-based equities at 7.0% expected annual return and 40% fixed income blended from 2/3 investment grade at 4.0% and 1/3 high yield at 5.75% (≈4.58% blended). Structured equity sleeve represents a diversified basket of equity-linked notes with 10.0% expected return. Structured fixed income sleeve represents a diversified basket of income-focused notes with 7.0% expected return. All figures are hypothetical and for illustrative purposes only.
                 </div>
 
                 <!-- Metrics Panels -->
@@ -154,17 +196,17 @@
         const INITIAL_VALUE = 1_000_000;
 
         const RETURNS = {
-            traditionalEquity: 0.08,
-            structuredEquity: 0.12,
-            traditionalFixedIncome: 0.05,
-            structuredFixedIncome: 0.08
+            traditionalEquity: 0.07,      // 7.0% expected annual return
+            structuredEquity: 0.10,       // structured equity sleeve
+            traditionalFixedIncome: 0.0458, // ~4.58% blended IG/HY
+            structuredFixedIncome: 0.07   // structured income sleeve
         };
 
         const VOLATILITY = {
-            traditionalEquity: 0.15,
-            structuredEquity: 0.12,
-            traditionalFixedIncome: 0.05,
-            structuredFixedIncome: 0.04
+            traditionalEquity: 0.16,      // 16% annualized volatility
+            structuredEquity: 0.13,       // slightly lower than long-only equity
+            traditionalFixedIncome: 0.06, // 6% blended bond volatility
+            structuredFixedIncome: 0.05   // lower-volatility structured income sleeve
         };
 
         // --------- STATE / DOM REFS ---------
