--- a/about.html
+++ b/about.html
@@ -18,13 +18,46 @@
         }
 
         .avatar-new {
+            width: 140px;
+            height: 140px;
+            border-radius: 50%;
             margin: 0 auto 1.25rem;
+            border: 2px solid rgba(200, 166, 120, 0.3);
+            overflow: hidden;
+            background: linear-gradient(135deg, rgba(200, 166, 120, 0.2) 0%, rgba(200, 166, 120, 0.05) 100%);
+            transition: all 0.4s ease;
+        }
+
+        .team-panel-clickable:hover .avatar-new {
+            border-color: rgba(200, 166, 120, 0.5);
+            transform: scale(1.05);
+        }
+
+        .avatar-new img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center 55%;
+            display: block;
         }
 
         .team-grid-new {
             grid-template-columns: repeat(2, minmax(0, 1fr));
             max-width: 700px;
             margin: 0 auto;
+        }
+
+        .team-view-bio {
+            color: #C8A678;
+            font-size: 0.85rem;
+            margin-top: 0.5rem;
+            text-align: center;
+            opacity: 0.8;
+            transition: opacity 0.3s ease;
+        }
+
+        .team-panel-clickable:hover .team-view-bio {
+            opacity: 1;
         }
     </style>
 </head>
@@ -52,15 +85,19 @@
                 <p class="team-subtitle fade-on-scroll">Click a profile to see how our multi-family office work in structured portfolios translates into solutions for advisors.</p>
                 <div class="team-grid-new">
                     <div class="team-panel-clickable fade-on-scroll" data-bio="habitz">
-                        <div class="avatar-new"></div>
+                        <div class="avatar-new">
+                            <img src="habitz.jpg" alt="Christian Habitz">
+                        </div>
                         <h3 class="team-name">Christian Habitz</h3>
                         <p class="team-role-new">Managing Partner</p>
                         <p class="team-view-bio">View bio</p>
                     </div>
                     <div class="team-panel-clickable fade-on-scroll delay-1" data-bio="bower">
-                        <div class="avatar-new"></div>
+                        <div class="avatar-new">
+                            <img src="bower.jpg" alt="Robert Bower">
+                        </div>
                         <h3 class="team-name">Robert Bower</h3>
-                        <p class="team-role-new">Head of Portfolio Construction</p>
+                        <p class="team-role-new">Chief Investment Officer</p>
                         <p class="team-view-bio">View bio</p>
                     </div>
                 </div>
@@ -147,7 +184,7 @@
             },
             bower: {
                 name: 'Robert Bower',
-                role: 'Head of Portfolio Construction',
+                role: 'Chief Investment Officer',
                 bio: 'Robert Bower leads portfolio construction at First Principle. Over the past five years he has focused on designing and managing structured-note portfolios for UHNW families and institutional clients, with a particular emphasis on systematic, rules-based sleeves rather than one-off trades. His work centers on translating complex option payoffs into simple building blocks that advisors can plug into models, with clear risk budgets, defined barriers, and measurable outcomes across market regimes.'
             }
         };
