--- a/simulator.html
+++ b/simulator.html
@@ -6,7 +6,6 @@
     <title>Portfolio Simulator | First Principle Asset Management</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&display=swap">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <style>
@@ -26,7 +25,7 @@
         }
 
         .simulator-header-title {
-            font-family: "Playfair Display", "Times New Roman", serif;
+            font-family: "Charter", "Bitstream Charter", "Georgia", "Times New Roman", serif;
             font-size: 32px;
             font-weight: 500;
             color: #C8A678;
