--- a/about.html
+++ b/about.html
@@ -6,58 +6,210 @@
     <title>About & Leadership | First Principle Asset Management</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&display=swap">
     <link rel="stylesheet" href="styles.css">
     <style>
         .team-section-new {
-            padding: 5rem 0 6rem 0;
+            padding: 6rem 0 7rem 0;
+            background-color: #1A2532;
         }
 
         .team-section-new .section-title {
-            margin-bottom: 2.5rem;
+            margin-bottom: 4rem;
+            color: #E0E0E0;
+            text-align: left;
+            font-size: 2.5rem;
+        }
+
+        .team-grid-new {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 2.5rem;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .team-panel-clickable {
+            cursor: pointer;
+            transition: transform 0.3s ease;
+        }
+
+        .team-panel-clickable:hover {
+            transform: translateY(-5px);
         }
 
         .avatar-new {
-            width: 140px;
-            height: 140px;
-            border-radius: 50%;
-            margin: 0 auto 1.25rem;
-            border: 2px solid rgba(200, 166, 120, 0.3);
+            width: 100%;
+            height: 450px;
+            margin: 0 auto 0;
             overflow: hidden;
-            background: linear-gradient(135deg, rgba(200, 166, 120, 0.2) 0%, rgba(200, 166, 120, 0.05) 100%);
-            transition: all 0.4s ease;
-        }
-
-        .team-panel-clickable:hover .avatar-new {
-            border-color: rgba(200, 166, 120, 0.5);
-            transform: scale(1.05);
+            background-color: #2A3542;
+            border-radius: 0;
         }
 
         .avatar-new img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            object-position: center 55%;
             display: block;
+            filter: grayscale(100%);
+            transition: filter 0.3s ease;
+            border-radius: 0;
         }
 
-        .team-grid-new {
-            grid-template-columns: repeat(2, minmax(0, 1fr));
-            max-width: 700px;
-            margin: 0 auto;
+        /* Individual image positioning for proper framing */
+        .team-panel-clickable[data-bio="habitz"] .avatar-new img {
+            object-position: center 35%;
+        }
+
+        .team-panel-clickable[data-bio="bower"] .avatar-new img {
+            object-position: center 30%;
+        }
+
+        .team-panel-clickable[data-bio="mckenna"] .avatar-new img {
+            object-position: center 50%;
+            object-fit: contain;
+            background-color: #2A3542;
+        }
+
+        .team-panel-clickable:hover .avatar-new img {
+            filter: grayscale(80%);
+        }
+
+        .team-info-box {
+            background-color: #2A3542;
+            padding: 1.75rem;
+            margin-top: 0;
+            min-height: 100px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        .team-name {
+            color: #C8A678;
+            font-size: 1.25rem;
+            font-weight: 400;
+            margin-bottom: 0.5rem;
+            font-family: "Charter", "Bitstream Charter", "Georgia", "Times New Roman", serif;
+        }
+
+        .team-role-new {
+            color: #B0B0B0;
+            font-size: 0.9rem;
+            margin: 0;
+            font-weight: 300;
         }
 
         .team-view-bio {
-            color: #C8A678;
-            font-size: 0.85rem;
-            margin-top: 0.5rem;
-            text-align: center;
-            opacity: 0.8;
-            transition: opacity 0.3s ease;
+            display: none;
         }
 
-        .team-panel-clickable:hover .team-view-bio {
-            opacity: 1;
+        /* About section improvements */
+        .about-section-new {
+            padding: 6rem 0;
+            background-color: #1E2A39;
+        }
+
+        .about-content-new {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .about-text-new {
+            max-width: 1400px;
+            margin: 0 auto;
+        }
+
+        .about-title {
+            color: #F8F9FA;
+            font-size: 2.25rem;
+            margin-bottom: 3rem;
+            font-weight: 400;
+        }
+
+        .about-paragraphs-horizontal {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 2.5rem;
+        }
+
+        .about-paragraph-white {
+            color: #E0E0E0;
+            font-size: 1.1rem;
+            line-height: 1.8;
+            margin: 0;
+        }
+
+        /* Partners Logo Banner */
+        .partners-banner {
+            background-color: #1A2532;
+            padding: 3rem 0;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .partners-banner-container {
+            width: 100%;
+            overflow: hidden;
+        }
+
+        .partners-logo-track {
+            display: flex;
+            gap: 4rem;
+            animation: scroll-logos 30s linear infinite;
+            width: fit-content;
+        }
+
+        .partners-logo-item {
+            flex-shrink: 0;
+            padding: 0 2rem;
+        }
+
+        .partner-name {
+            color: #B0B0B0;
+            font-size: 1.1rem;
+            font-weight: 400;
+            white-space: nowrap;
+            letter-spacing: 0.05em;
+            transition: color 0.3s ease;
+        }
+
+        .partners-logo-item:hover .partner-name {
+            color: #C8A678;
+        }
+
+        @keyframes scroll-logos {
+            0% {
+                transform: translateX(0);
+            }
+            100% {
+                transform: translateX(-50%);
+            }
+        }
+
+        @media (max-width: 968px) {
+            .about-paragraphs-horizontal {
+                grid-template-columns: 1fr;
+                gap: 2rem;
+            }
+        }
+
+        @media (max-width: 968px) {
+            .team-grid-new {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 1.5rem;
+            }
+        }
+
+        @media (max-width: 640px) {
+            .team-grid-new {
+                grid-template-columns: 1fr;
+                gap: 2rem;
+            }
+
+            .avatar-new {
+                height: 350px;
+            }
         }
     </style>
 </head>
@@ -81,24 +233,34 @@
         <!-- TEAM SECTION -->
         <section class="team-section-new">
             <div class="container">
-                <h2 class="section-title fade-on-scroll">Leadership Team</h2>
-                <p class="team-subtitle fade-on-scroll">Click a profile to see how our multi-family office work in structured portfolios translates into solutions for advisors.</p>
+                <h2 class="section-title fade-on-scroll">Leadership</h2>
                 <div class="team-grid-new">
                     <div class="team-panel-clickable fade-on-scroll" data-bio="habitz">
                         <div class="avatar-new">
-                            <img src="habitz.jpg" alt="Christian Habitz">
+                            <img src="habitz.jpg" alt="Christian N. Habitz">
                         </div>
-                        <h3 class="team-name">Christian Habitz</h3>
-                        <p class="team-role-new">Managing Partner</p>
-                        <p class="team-view-bio">View bio</p>
+                        <div class="team-info-box">
+                            <h3 class="team-name">Christian N. Habitz</h3>
+                            <p class="team-role-new">Founder | Managing Partner</p>
+                        </div>
                     </div>
                     <div class="team-panel-clickable fade-on-scroll delay-1" data-bio="bower">
                         <div class="avatar-new">
-                            <img src="bower.jpg" alt="Robert Bower">
+                            <img src="bower.jpg" alt="Robert D. Bower">
                         </div>
-                        <h3 class="team-name">Robert Bower</h3>
-                        <p class="team-role-new">Chief Investment Officer</p>
-                        <p class="team-view-bio">View bio</p>
+                        <div class="team-info-box">
+                            <h3 class="team-name">Robert D. Bower, CFA, CAIA</h3>
+                            <p class="team-role-new">Chief Investment Officer</p>
+                        </div>
+                    </div>
+                    <div class="team-panel-clickable fade-on-scroll delay-2" data-bio="mckenna">
+                        <div class="avatar-new">
+                            <img src="mckenna.jpg" alt="Colleen T. McKenna">
+                        </div>
+                        <div class="team-info-box">
+                            <h3 class="team-name">Colleen T. McKenna</h3>
+                            <p class="team-role-new">Director of Operations and Client Services</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -107,45 +269,63 @@
         <!-- ABOUT SECTION -->
         <section class="about-section-new">
             <div class="container">
-                <div class="about-content-new">
-                    <div class="about-text-new fade-on-scroll">
-                        <h2 class="about-title">Born from Institutional Expertise</h2>
+                <div class="about-text-new fade-on-scroll">
+                    <h2 class="about-title">Born from Institutional Expertise</h2>
+                    <div class="about-paragraphs-horizontal">
                         <p class="about-paragraph-white">First Principle Asset Management was created by The Invictus Collective, a multi-family office serving ultra-high-net-worth families and institutional clients. For years, Christian Habitz and Rob Bower have used structured-note portfolios to engineer downside-aware income and custom exposures for a small number of private clients.</p>
                         <p class="about-paragraph-white">Those portfolios were built one client at a time, with direct access to banks, structured-product desks, and institutional due diligence. The result was a set of repeatable frameworks for using structured notes as portfolio enhancements rather than one-off trades.</p>
                         <p class="about-paragraph-white">First Principle exists to bring that same architecture to the advisory market. Instead of bespoke tickets, we design scalable SMAs and AMC portfolios that give advisors and their clients access to the same research, counterparties, and risk framework previously reserved for UHNW families—without channel conflict and with clear integration into existing 60/40 and model portfolios.</p>
                     </div>
-                    <div class="infrastructure-panel fade-on-scroll delay-1">
-                        <h3 class="infrastructure-title">Institutional Infrastructure</h3>
-                        <ul class="infrastructure-list">
-                            <li class="infrastructure-item">
-                                <div class="infrastructure-item-header">
-                                    <span>Compliance & Oversight</span>
-                                    <span class="dropdown-caret">▼</span>
-                                </div>
-                                <div class="infrastructure-dropdown">Independent RIA oversight, written investment policy, and ongoing monitoring of issuers, payoff structures, and portfolio guidelines.</div>
-                            </li>
-                            <li class="infrastructure-item">
-                                <div class="infrastructure-item-header">
-                                    <span>Legal Counsel</span>
-                                    <span class="dropdown-caret">▼</span>
-                                </div>
-                                <div class="infrastructure-dropdown">Specialized counsel experienced in derivatives, structured notes, and cross-border offerings, supporting consistent documentation and investor protection.</div>
-                            </li>
-                            <li class="infrastructure-item">
-                                <div class="infrastructure-item-header">
-                                    <span>Accounting & Tax</span>
-                                    <span class="dropdown-caret">▼</span>
-                                </div>
-                                <div class="infrastructure-dropdown">Reporting designed to align with custodians and provide clear treatment of coupons, maturity proceeds, and tax character where applicable.</div>
-                            </li>
-                            <li class="infrastructure-item">
-                                <div class="infrastructure-item-header">
-                                    <span>Insurance & Risk Management</span>
-                                    <span class="dropdown-caret">▼</span>
-                                </div>
-                                <div class="infrastructure-dropdown">Frameworks for issuer diversification, concentration limits, and counterparties, focused on protecting client capital across market regimes.</div>
-                            </li>
-                        </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- PARTNERS LOGO BANNER -->
+        <section class="partners-banner">
+            <div class="partners-banner-container">
+                <div class="partners-logo-track">
+                    <div class="partners-logo-item">
+                        <span class="partner-name">Navian Capital</span>
+                    </div>
+                    <div class="partners-logo-item">
+                        <span class="partner-name">Luma Technologies</span>
+                    </div>
+                    <div class="partners-logo-item">
+                        <span class="partner-name">StoneX</span>
+                    </div>
+                    <div class="partners-logo-item">
+                        <span class="partner-name">Gen2</span>
+                    </div>
+                    <div class="partners-logo-item">
+                        <span class="partner-name">Morgan Stanley</span>
+                    </div>
+                    <div class="partners-logo-item">
+                        <span class="partner-name">JP Morgan</span>
+                    </div>
+                    <div class="partners-logo-item">
+                        <span class="partner-name">Bank of Colombia</span>
+                    </div>
+                    <!-- Duplicate for seamless loop -->
+                    <div class="partners-logo-item">
+                        <span class="partner-name">Navian Capital</span>
+                    </div>
+                    <div class="partners-logo-item">
+                        <span class="partner-name">Luma Technologies</span>
+                    </div>
+                    <div class="partners-logo-item">
+                        <span class="partner-name">StoneX</span>
+                    </div>
+                    <div class="partners-logo-item">
+                        <span class="partner-name">Gen2</span>
+                    </div>
+                    <div class="partners-logo-item">
+                        <span class="partner-name">Morgan Stanley</span>
+                    </div>
+                    <div class="partners-logo-item">
+                        <span class="partner-name">JP Morgan</span>
+                    </div>
+                    <div class="partners-logo-item">
+                        <span class="partner-name">Bank of Colombia</span>
                     </div>
                 </div>
             </div>
@@ -178,14 +358,19 @@
         // Team bios data
         const teamBios = {
             habitz: {
-                name: 'Christian Habitz',
-                role: 'Managing Partner',
+                name: 'Christian N. Habitz',
+                role: 'Founder | Managing Partner',
                 bio: 'Christian Habitz is the Managing Partner of The Invictus Collective and co-founder of First Principle. At Invictus, he helped build a structured-note and options program used by ultra-high-net-worth families and institutional clients to shape risk, generate income, and express non-linear views across global markets. First Principle is the extension of that work to the advisory channel, packaging institutional tools, bank relationships, and investment-committee discipline into scalable portfolios that fit directly alongside traditional 60/40 allocations.'
             },
             bower: {
-                name: 'Robert Bower',
+                name: 'Robert D. Bower, CFA, CAIA',
                 role: 'Chief Investment Officer',
                 bio: 'Robert Bower leads portfolio construction at First Principle. Over the past five years he has focused on designing and managing structured-note portfolios for UHNW families and institutional clients, with a particular emphasis on systematic, rules-based sleeves rather than one-off trades. His work centers on translating complex option payoffs into simple building blocks that advisors can plug into models, with clear risk budgets, defined barriers, and measurable outcomes across market regimes.'
+            },
+            mckenna: {
+                name: 'Colleen T. McKenna',
+                role: 'Director of Operations and Client Services',
+                bio: 'Colleen McKenna oversees operations and client services at First Principle, ensuring seamless implementation of structured-note portfolios and maintaining the highest standards of client experience. Her background in institutional operations and client relationship management supports First Principle\'s mission to deliver institutional-grade solutions to the advisory market.'
             }
         };
 
